--- a/styles/components/logo.scss
+++ b/styles/components/logo.scss
@@ -1,14 +1,6 @@
 @import '../_variables';
 
-/**
- * @atom Logo
- * @section Specifics
- * @description
- *  Title logo.
- * @markup
- *   <div class="logo">oRotter</div>
- */
-.logo {
+.Logo {
     font-size: 28px;
     font-weight: bold;
 }
