--- a/scss/components/Panel.scss
+++ b/scss/components/Panel.scss
@@ -8,9 +8,11 @@
 }
 
 .Panel-title {
+    margin: 0;
     padding: 15px 0;
     border-bottom: 1px solid $gray-5;
     text-align: center;
+    font-weight: normal;
 
     &--bold {
         font-weight: bold;
