--- a/scss/components/StatsCard.scss
+++ b/scss/components/StatsCard.scss
@@ -15,10 +15,12 @@
 }
 
 .StatsCard-fullname {
+    margin: 0;
     font-size: 20px;
 }
 
 .StatsCard-username {
+    margin: 0;
     margin-top: 5px;
 }
 
