--- a/scss/components/SummaryCard.scss
+++ b/scss/components/SummaryCard.scss
@@ -14,11 +14,13 @@
 }
 
 .SummaryCard-fullname {
+    margin: 0;
     color: $primary;
     font-size: 15px;
 }
 
 .SummaryCard-username {
+    margin: 0;
     margin-top: 5px;
 }
 
