--- a/scss/components/Tweet.scss
+++ b/scss/components/Tweet.scss
@@ -21,16 +21,19 @@
 }
 
 .Tweet-tweeterFullname {
+    margin: 0;
     color: $primary;
     font-size: 20px;
 }
 
 .Tweet-tweeterUsername {
+    margin: 0;
     margin-left: 10px;
     color: $gray-3;
 }
 
 .Tweet-text {
+    margin: 0;
     margin-top: 10px;
     font-size: 15px;
     line-height: 24px;
