--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -28,3 +28,7 @@ $gray-5: #f1f1f1 !default;
 // Key colors
 
 $primary: $orange-1 !default;
+
+$font-sans-serif: 'Meiryo', sans-serif;
+
+$font-mono: 'Consolas', monospace;
