--- a/scss/orotter-bootstrap.scss
+++ b/scss/orotter-bootstrap.scss
@@ -4,6 +4,7 @@
 // include normalize.css
 @import 'normalize.css/normalize';
 
-@import 'components/components';
+@import 'base/base';
 @import 'layouts/layouts';
+@import 'components/components';
 @import 'utilities/utilities';
