--- a/css/orotter-bootstrap.css
+++ b/css/orotter-bootstrap.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*! orotter-bootstrap | MIT License | github.com/orotter/orotter-bootstrap */
 /*! normalize.css v5.0.0 | MIT License | github.com/necolas/normalize.css */
 html{
@@ -198,6 +199,68 @@ template{
 [hidden]{
   display:none;
 }
+html{
+  font-family:"Meiryo", sans-serif;
+}
+
+code{
+  font-family:"Consolas", monospace;
+}
+
+button,
+input,
+textarea{
+  font-family:"Meiryo", sans-serif;
+}
+
+.base{
+  background:#ffd275;
+  color:#333333;
+}
+
+.page-wrapper{
+  width:1024px;
+  margin:0 auto;
+  padding-top:100px;
+}
+
+.flex{
+  display:-ms-flexbox;
+  display:flex;
+}
+
+.sidebar{
+  -ms-flex:0 0 auto;
+      flex:0 0 auto;
+  width:300px;
+  margin-right:20px;
+}
+
+.sidebar .Panel{
+  margin-bottom:20px;
+}
+
+.main{
+  -ms-flex:1 1 0%;
+      flex:1 1 0%;
+}
+
+.main .Panel{
+  margin-bottom:20px;
+}
+
+.follow-list{
+  display:-ms-flexbox;
+  display:flex;
+  -ms-flex-wrap:wrap;
+      flex-wrap:wrap;
+}
+
+.follow-list-item{
+  max-width:50%;
+  -ms-flex-preferred-size:50%;
+      flex-basis:50%;
+}
 .Avatar{
   display:inline-block;
   overflow:hidden;
@@ -253,6 +316,7 @@ template{
 .GlobalHeader{
   position:fixed;
   width:100%;
+  margin:0;
   padding:11px 0;
   background:#fff;
   box-shadow:0 0 4px rgba(30, 30, 30, 0.3);
@@ -263,7 +327,7 @@ template{
   display:flex;
   -ms-flex-align:center;
       align-items:center;
-  width:1024px;
+  max-width:1024px;
   margin:0 auto;
 }
 
@@ -327,7 +391,7 @@ template{
 }
 
 .RoundInput--primary{
-  border:none;
+  border:1px solid #fff1d4;
   background:#fff1d4;
   color:#f5a623;
 }
@@ -347,21 +411,37 @@ template{
 
 .RoundInput-input::-webkit-input-placeholder{
   line-height:30px;
-  color:#f5a623;
+  color:#888888;
 }
 
 .RoundInput-input::-moz-placeholder{
   line-height:30px;
-  color:#f5a623;
+  color:#888888;
 }
 
 .RoundInput-input:-ms-input-placeholder{
   line-height:30px;
-  color:#f5a623;
+  color:#888888;
 }
 
 .RoundInput-input::placeholder{
   line-height:30px;
+  color:#888888;
+}
+
+.RoundInput--primary .RoundInput-input::-webkit-input-placeholder{
+  color:#f5a623;
+}
+
+.RoundInput--primary .RoundInput-input::-moz-placeholder{
+  color:#f5a623;
+}
+
+.RoundInput--primary .RoundInput-input:-ms-input-placeholder{
+  color:#f5a623;
+}
+
+.RoundInput--primary .RoundInput-input::placeholder{
   color:#f5a623;
 }
 .StatsCard-summary{
@@ -454,6 +534,8 @@ template{
 }
 
 .Tweet-content{
+  -ms-flex:1 1 0%;
+      flex:1 1 0%;
   padding-top:12px;
 }
 
@@ -529,87 +611,42 @@ template{
   margin:0 12px;
   color:#d8d8d8;
 }
-
-.base{
-  background:#ffd275;
-  color:#333333;
-}
-
-.page-wrapper{
-  width:1024px;
-  margin:0 auto;
-  padding-top:100px;
-}
-
-.flex{
-  display:-ms-flexbox;
-  display:flex;
-}
-
-.sidebar{
-  -ms-flex:0 0 auto;
-      flex:0 0 auto;
-  width:300px;
-  margin-right:20px;
-}
-
-.sidebar .Panel{
-  margin-bottom:20px;
-}
-
-.main{
-  -ms-flex:1 1 0%;
-      flex:1 1 0%;
-}
-
-.main .Panel{
-  margin-bottom:20px;
-}
-
-.follow-list{
-  display:-ms-flexbox;
-  display:flex;
-  -ms-flex-wrap:wrap;
-      flex-wrap:wrap;
-}
-
-.follow-list-item{
-  max-width:50%;
-  -ms-flex-preferred-size:50%;
-      flex-basis:50%;
-}
-.u-textGray{
-  color:#888888;
-}
-
 .u-textPrimary{
-  color:#f5a623;
+  color:#f5a623 !important;
+}
+
+.u-textGray{
+  color:#888888 !important;
 }
 
 .u-textWhite{
-  color:#fff;
+  color:#fff !important;
 }
 
 .u-textBlack{
-  color:#333333;
-}
-
-.u-bgPrimary{
-  background-color:#f5a623;
-}
-
-.u-bgWhite{
-  background-color:#fff;
+  color:#333333 !important;
 }
 
 .u-textBold{
-  font-weight:bold;
+  font-weight:bold !important;
 }
 
 .u-textLight{
-  font-weight:light;
+  font-weight:light !important;
 }
 
 .u-textCenter{
-  text-align:center;
+  text-align:center !important;
+}
+
+.u-bgPrimary{
+  background-color:#f5a623 !important;
+}
+
+.u-bgWhite{
+  background-color:#fff !important;
+}
+
+.u-bgBlack{
+  background-color:#333333 !important;
 }
