--- a/scss/components/Button.scss
+++ b/scss/components/Button.scss
@@ -1,5 +1,22 @@
 @import '../_variables';
 
+/*
+@styleguide
+
+## Button
+
+Basic button component. Use for `<button>` element.
+
+<button class="Button">Button</button>
+<button class="Button Button--primary">Primary</button>
+<button class="Button Button--primaryInvert">Invert</button>
+
+```
+<button class="Button">Button</button>
+<button class="Button Button--primary">Primary</button>
+<button class="Button Button--primaryInvert">Invert</button>
+```
+*/
 .Button {
     display: inline-block;
     min-width: 80px;
