--- a/scss/components/_components.scss
+++ b/scss/components/_components.scss
@@ -2,6 +2,7 @@
 @import './Button';
 @import './Divider';
 @import './GlobalHeader';
+@import './Icon';
 @import './Logo';
 @import './Panel';
 @import './RoundInput';
